--- a/lessons/Part2.Rmd
+++ b/lessons/Part2.Rmd
@@ -102,17 +102,11 @@ goodBirds <- birds %>%
 glimpse(goodBirds)
 ```
 
+Here we first pivoted the data frame to consolidate values into two variables: "sight" and "n" where the latter represents the number of sightings. Next, we separated the sight column into a type variable and a location. This makes the data tidy because each bird is a subset of type and "Nest" and "Air" are both types of locations.
+
 The workflow above used a [regular expression](https://stringr.tidyverse.org/articles/regular-expressions.html) to split and keep the capital letter. Regular expressions are, in general, beyond the scope of this course. A great resource to practice regular expressions is [regex101.com](https://regex101.com/) 
 
-Another way to separate is by position. That call looks like this. 
-
-```{r, eval = F}
-separate(col = VAR, into = c("VAR1", "VAR2"), sep = NUMBER)
-## example that splits on the first character 
-separate(col = col, into = c("var1", "var2"), sep = 1)
-```
-
-Separating by position on datasets with a standard format can be helpful. Let's look at what happens when we separate by the 1st position. 
+Another way to separate is by position. Separating by position on datasets with a standard format can be helpful. Let's look at what happens when we separate by the 1st position. 
 
 ```{r}
 sepEx <- birds %>% 
